# footballManagerRoleCalculator

./: README.md  pyproject.toml  role-score-calculator.py  test-data.html
